# Cpp-OOP-Projects

./: README.md
chess/: Bishop.cpp  Bishop.hpp  Board.cpp  Board.hpp  BoardFiller.cpp  BoardFiller.hpp  BoardPrinter.cpp  BoardPrinter.hpp  BoardUtils.cpp  BoardUtils.hpp  EventHandler.hpp  GameEventHandler.cpp  GameEventHandler.hpp  GameOverseer.cpp  GameOverseer.hpp  InputHandler.cpp  InputHandler.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Move.cpp  Move.hpp  MoveEvent.hpp  MoveType.hpp  MovementCoordinator.cpp  MovementCoordinator.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  PieceFactory.cpp  PieceFactory.hpp  PieceType.hpp  PromotionHandler.cpp  PromotionHandler.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp  (+3 more)
tic-tac-toe/: .gitignore  Ball.cpp  Ball.hpp  Board.cpp  Board.hpp  BoardInserter.cpp  BoardInserter.hpp  BoardPrinter.cpp  BoardPrinter.hpp  BoardUtils.cpp  BoardUtils.hpp  CMakeLists.txt  Cross.cpp  Cross.hpp  GameUtils.cpp  GameUtils.hpp  InputProcessor.cpp  InputProcessor.hpp  Shape.hpp  ShapeFactory.cpp  ShapeFactory.hpp  ShapeType.hpp  Tile.cpp  Tile.hpp  TileSet.cpp  TileSet.hpp  VictoryMonitor.cpp  VictoryMonitor.hpp  main.cpp
